--- a/SportCar/cars.html
+++ b/SportCar/cars.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <!-- <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script> -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +44,7 @@
                 <td><input id="image" placeholder="Link to image" type="text"/></td>
             <!-- </tr>
             <tr> -->
-                <td><input id="add" onclick="createCar()" value="Link to image" type="button"/></td>
+                <td><input id="add" onclick="createCar()" value="Add" type="button"/></td>
             </tr>
             
 
@@ -59,6 +61,8 @@
                 <td>license number of car</td>
                 <td>price of car</td>
                 <td>image of car</td>
+                <td><button>>>></button></td>
+                <td><button><<<</button></td>
             </thead>
         </table>
     </div>
