--- a/SportCar/cars.html
+++ b/SportCar/cars.html
@@ -61,8 +61,8 @@
                 <td>license number of car</td>
                 <td>price of car</td>
                 <td>image of car</td>
-                <td><button>>>></button></td>
-                <td><button><<<</button></td>
+                <td><button onclick="next()">>>></button></td>
+                <td><button onclick="back()"><<<</button></td>
             </thead>
         </table>
     </div>
